fix: inherit secrets for Windows code signing and add certificate thumbprint environment variable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,6 +120,7 @@ jobs:
     name: Code Sign Windows App
     permissions:
       actions: write
+    secrets: inherit
     with:
       version: ${{ needs.tag.outputs.version }}
 
