--- a/.github/workflows/ci_codesign-windows.yml
+++ b/.github/workflows/ci_codesign-windows.yml
@@ -37,6 +37,8 @@ jobs:
               Write-Host "Signing $file with certificate thumbprint $thumbprint"
               & "signtool.exe" sign /fd SHA256 /td SHA256 /tr http://timestamp.digicert.com /sha1 $thumbprint $file.FullName
           }
+        env:
+          CERT_THUMBPRINT:  ${{ secrets.CERT_THUMBPRINT }}
 
       - name: Verify signatures
         continue-on-error: true
