--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -1,5 +1,4 @@
 name: Release
-
 on:
   workflow_call:
     inputs:
@@ -9,66 +8,70 @@ on:
       version:
         required: true
         type: string
-
 jobs:
   release:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
-
+    
     environment:
       name: Release
-
+   
     permissions:
       contents: write
       packages: write
       actions: read
       id-token: write
-
+    
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: '0'
-
+      
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
+      
       - name: Tag docker image with latest
         run: |
           REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
           docker pull ghcr.io/$REPO_NAME:${{ inputs.fileversion }}
           docker tag ghcr.io/$REPO_NAME:${{ inputs.fileversion }} ghcr.io/$REPO_NAME:latest
           docker push ghcr.io/$REPO_NAME:latest
-
-      # Install Cosign
+      
+          # Install Cosign
       - name: Install Cosign
         uses: sigstore/cosign-installer@v3.5.0
-
-      # Sign the image using keyless signing (GitHub OIDC)
+      
+        # Sign the image using keyless signing (GitHub OIDC)
       - name: Sign Docker image with Cosign
         run: |
           REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
           cosign sign --yes ghcr.io/$REPO_NAME:${{ inputs.fileversion }}
           cosign sign --yes ghcr.io/$REPO_NAME:latest
-
+      
       - name: Verify the signature
         run: |
           REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
           cosign verify --certificate-identity="https://github.com/LetPeopleWork/Lighthouse/.github/workflows/ci_release.yml@refs/heads/main" --certificate-oidc-issuer="https://token.actions.githubusercontent.com" ghcr.io/$REPO_NAME:${{ inputs.fileversion }}
           cosign verify --certificate-identity="https://github.com/LetPeopleWork/Lighthouse/.github/workflows/ci_release.yml@refs/heads/main" --certificate-oidc-issuer="https://token.actions.githubusercontent.com" ghcr.io/$REPO_NAME:latest
-
+      
       - uses: actions/download-artifact@v4
         with:
           name: Lighthouse-win-x64-${{ inputs.version }}
           path: LighthouseArtifacts/win-x64
-
+          
       - uses: actions/download-artifact@v4
         with:
           name: Lighthouse-osx-${{ inputs.version }}
           path: LighthouseArtifacts/osx-dmg
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: Lighthouse-osx-app-${{ inputs.version }}
+          path: LighthouseArtifacts/osx-app
 
       - uses: actions/download-artifact@v4
         with:
@@ -85,13 +88,14 @@ jobs:
           files: LighthouseArtifacts/linux-x64
           dest: Lighthouse-linux-x64.zip
 
-      - name: Prepare macOS release zip
+      - name: Prepare macOS release files
         run: |
           cp LighthouseArtifacts/osx-dmg/Lighthouse-${{ inputs.version }}.dmg Lighthouse-osx-${{ inputs.version }}.dmg
+          cp LighthouseArtifacts/osx-app/Lighthouse-${{ inputs.version }}.app.zip Lighthouse-osx-${{ inputs.version }}.app.zip
 
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "Lighthouse-win-x64.zip,Lighthouse-osx-${{ inputs.version }}.dmg,Lighthouse-linux-x64.zip"
+          artifacts: "Lighthouse-win-x64.zip,Lighthouse-osx-${{ inputs.version }}.dmg,Lighthouse-osx-${{ inputs.version }}.app.zip,Lighthouse-linux-x64.zip"
           tag: ${{ inputs.version }}
           prerelease: true
           name: "Lighthouse ${{ inputs.version }}"
