--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -65,7 +65,7 @@ jobs:
           
       - uses: actions/download-artifact@v4
         with:
-          name: Lighthouse-osx-${{ inputs.version }}
+          name: Lighthouse-osx-dmg-${{ inputs.version }}
           path: LighthouseArtifacts/osx-dmg
 
       - uses: actions/download-artifact@v4
