--- a/.github/workflows/ci_verifymacos.yml
+++ b/.github/workflows/ci_verifymacos.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Download signed DMG
         uses: actions/download-artifact@v4
         with:
-          name: Lighthouse-osx-${{ inputs.version }}
+          name: Lighthouse-osx-dmg-${{ inputs.version }}
           path: ./publish
 
       - name: Verify DMG signature
